--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -29,6 +29,12 @@ body, html, .app {
     margin-top: $header-height;
 }
 
+.not-found, .no-results {
+    margin-top: 70px;
+    width: 100%;
+    text-align: center;
+}
+
 .btn {
     display: inline-block;
     line-height: 1.5;
