--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -6,6 +6,15 @@
     width: 100%;
     z-index: 100;
 
+    .brand-logo {
+        height: 42px;
+        display: inline-block;
+
+        img {
+            height: 100%;
+        }
+    }
+
     .header-nav {
         float: right;
     }
