Adds infinite scroll loading

--- a/src/styles/_movies.scss
+++ b/src/styles/_movies.scss
@@ -147,3 +147,9 @@
     right: 5px;
     bottom: 35px;
 }
+
+.loader-infinite {
+    padding-top: 15px;
+    font-size: 30px;
+    text-align: center;
+}
