--- a/src/styles/_movies.scss
+++ b/src/styles/_movies.scss
@@ -148,6 +148,16 @@
     bottom: 35px;
 }
 
+.overlay-movie {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 1000;
+}
+
 .loader-infinite {
     padding-top: 15px;
     font-size: 30px;
