--- a/src/styles/_movies.scss
+++ b/src/styles/_movies.scss
@@ -163,3 +163,11 @@
     font-size: 30px;
     text-align: center;
 }
+
+.sub-title-favourites {
+    font-weight: 500;
+}
+
+.btn-find-movies {
+    margin-top: 20px;
+}
