--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -9,9 +9,10 @@
     .brand-logo {
         height: 42px;
         display: inline-block;
+        padding: 2px 0 0 8px;
 
         img {
-            height: 100%;
+            height: 38px;
         }
     }
 
@@ -34,5 +35,83 @@
         &:hover {
             color: $white;
         }
+    }
+}
+
+.menu-overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    border: none;
+    cursor: default !important;
+    z-index: 99;
+}
+
+.mobile-menu {
+    position: fixed;
+    top: $header-height;
+    left: 0;
+    right: 0;
+    background-color: darken($bg-dark, 4);
+    z-index: 100;
+
+    .mobile-menu-link {
+        text-align: right;
+
+        a {
+            display: block;
+            width: auto;
+            text-align: right;
+        }
+
+        .mobile-menu-closer {
+            background-color: transparent;
+            width: 100%;
+            text-align: right;
+            padding: 15px 20px;
+        }
+    }
+}
+
+.btn-header-menu {
+    width: 40px;
+    color: white;
+    padding: 6px 8px;
+    font-size: 20px;
+    height: 40px;
+
+    &:hover {
+        color: darken(white, 5);
+    }
+
+    &:active {
+        color: darken(white, 15);
+    }
+
+    i {
+        vertical-align: text-top;
+    }
+}
+
+.desktop-menu {
+    display: none;
+}
+
+@media (min-width: 768px) {
+    .desktop-menu {
+        display: initial;
+    }
+
+    .mobile-menu {
+        display: none;
+    }
+
+    .btn-header-menu {
+        display: none;
     }
 }
