--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -24,7 +24,7 @@ body, html, .app {
 
 .page-container {
     text-align: center;
-    padding: 20px;
+    padding: 20px 10px;
     min-height: calc(100% - 116px);
     margin-top: $header-height;
 }
@@ -65,5 +65,11 @@ body, html, .app {
 
     &:active {
         background-color: lighten($primary-blue, 10);
+    }
+}
+
+@media (min-width: 768px) {
+    .page-container {
+        padding: 20px;
     }
 }
